--- a/package.json
+++ b/package.json
@@ -1,38 +1,2 @@
-{
-  "name": "final",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-}
+{"homepage":"https://mariamshukry.github.io/final_project.git","name":"final","version":"0.1.0","private":true,"dependencies":{"@fortawesome/fontawesome-free":"^6.5.1","@testing-library/jest-dom":"^5.17.0","@testing-library/react":"^13.4.0","@testing-library/user-event":"^13.5.0","@types/axios":"^0.14.0","@types/bootstrap":"^5.2.10","@types/react-detect-offline":"^2.4.5","@types/react-helmet":"^6.1.11","@types/react-loader-spinner":"^4.0.0","@types/react-query":"^1.2.9","@types/react-router-dom":"^5.3.3","@types/react-slick":"^0.23.13","@types/react-toastify":"^4.1.0","@types/sass":"^1.45.0","@types/yup":"^0.32.0","axios":"^1.6.7","bootstrap":"^5.3.3","formik":"^2.4.5","generate-react-cli":"^8.4.0","react":"^18.2.0","react-bootstrap":"^2.10.1","react-detect-offline":"^2.4.5","react-dom":"^18.2.0","react-helmet":"^6.1.0","react-hook-form":"^7.51.0","react-loader-spinner":"^6.1.6","react-query":"^3.39.3","react-router-dom":"^6.22.2","react-scripts":"5.0.1","react-slick":"^0.30.1","react-toastify":"^10.0.4","sass":"^1.70.0","web-vitals":"^2.1.4","yup":"^1.3.3"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject","predeploy": "npm run build",
+ "deploy": "gh-pages -d build"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"devDependencies":{"gh-pages":"^6.1.1"}}
